# Affective_touch

./: .gitignore  CMakeLists.txt  README.md
Dataset/: arm.xlsx  free.xlsx  information.csv  motion_energy.xlsx  position.xlsx  torso.csv
app/: CMakeLists.txt
app/SkinDataExperiment/: CMakeLists.txt
app/SkinDataExperiment/config/: skin_intro.sh
app/SkinDataExperiment/scripts/: SkinDataExperiment.xml
modules/: CMakeLists.txt
modules/SkinDataExperiment/: CMakeLists.txt  GUI.py  main.py  yarp_modules.py
